# Telemetry-Hub-2

./: .gitignore  README.md  argos.sh
.github/: dependabot.yml
.github/workflows/: build-check.yml  client-build.yml  lint-check.yml  prettier-check.yml  scylla-build.yml  scylla-ci.yml  scylla-tests.yml
angular-client/: .dockerignore  .eslintrc.json  Dockerfile  angular.json  compose.client.yml  package-lock.json  package.json
angular-client/src/: data-type.enum.ts  styles.css
charybdis/: .gitignore  README.md  compose.yml  package-lock.json  package.json
charybdis/cli/: package-lock.json  package.json
charybdis/cloud-prisma/: prisma.ts  schema.prisma
charybdis/local-prisma/: prisma.ts  schema.prisma
charybdis/scripts/: database-setup.js  prisma-sql-not-null-enforcment.js
compose/: README.md  compose.brick.yml  compose.calypso.yml  compose.client-dev.yml  compose.fake-data.yml  compose.router.yml  compose.scylla-dev.yml  compose.test-charybdis.yml  compose.yml
scylla-server/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker_run.sh  integration_test.sh
scylla-server/migrations/2024-11-10-031516_create_all/: down.sql  up.sql
scylla-server/src/: db_handler.rs  error.rs  lib.rs  main.rs  metadata_structs.rs  mod.rs  models.rs  mqtt_processor.rs  schema.rs  socket_handler.rs
scylla-server/src/controllers/: car_command_controller.rs  data_controller.rs  data_type_controller.rs  file_insertion_controller.rs  mod.rs  node_controller.rs  run_controller.rs
scylla-server/src/processors/: db_handler.rs  mod.rs  mqtt_processor.rs
scylla-server/src/proto/: playback_data.proto
scylla-server/src/services/: data_service.rs  data_type_service.rs  mod.rs  run_service.rs
scylla-server/src/transformers/: data_transformer.rs  data_type_transformer.rs  mod.rs  node_transformer.rs  run_transformer.rs
scylla-server/tests/: data_service_test.rs  data_type_service_test.rs  run_service_test.rs  system_service_test.rs  test_utils.rs
siren-base/: compose.siren.yml
(+244 files in other folders)
