[package]
name = "scylla-server"
version = "0.0.1"
edition = "2021"
default-run = "scylla-server"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "chrono"] }
pq-sys = { version = "0.6.3", features = ["bundled_without_openssl"] }
dotenvy = "0.15"
serde = "1.0.203"
protobuf-codegen = "3.7.1"
protobuf = { version = "3.7.1", features = ["with-bytes"] }
tokio = { version = "1.43.0", features = ["full", "tracing"] }
axum = { version = "0.8.1", features = ["multipart"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
socketioxide = { version = "0.15.1", features = ["tracing"] }
rumqttc = { git = "https://github.com/bytebeamio/rumqtt", branch = "main"}
tokio-util = { version=  "0.7.11", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter"] }
rand = "0.8.5"
console-subscriber = { version = "0.4.1", optional = true }
ringbuffer = "0.15.0"
clap = { version = "4.5.28", features = ["derive", "env"] }
axum-extra = { version = "0.10.0", features = ["query"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
regex = "1.11.1"
rangemap = "1.5.1"
axum-macros = "0.5.0"
diesel-async = { version = "0.5.2", features = ["postgres", "bb8", "async-connection-wrapper", "sync-connection-wrapper", "tokio"] }
rustc-hash = "2.1.1"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"


[features]
top = ["dep:console-subscriber"]

[build-dependencies]
protobuf-codegen = "3.7.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

[profile.profiling]
inherits = "release"
debug = true
strip = false

[[bin]]
name = "scylla-server"
path = "src/main.rs"

